--- a/package.json
+++ b/package.json
@@ -1,27 +1,45 @@
 {
-  "name": "FinalCountdown",
+  "name": "final-countdown",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "test": "jest --verbose --coverage",
+    "lint": "eslint src __tests__ storybook --ext .js,.ts,.tsx",
+    "android:adb": "adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^0.0.7",
+    "@storybook/react-native": "^5.3.12",
+    "@testing-library/react-native": "^5.0.3",
+    "@types/jest": "^25.1.1",
+    "@types/react": "^16.9.19",
+    "@types/react-native": "^0.61.5",
+    "@types/styled-components": "^4.4.2",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.1",
     "jest": "^25.1.0",
+    "jest-styled-components": "^7.0.0",
+    "lint-staged": "^10.0.7",
     "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.9.0"
+    "prettier": "^1.19.1",
+    "react-dom": "16.9.0",
+    "react-test-renderer": "16.9.0",
+    "ts-jest": "^25.2.0",
+    "typescript": "^3.7.5"
   },
   "jest": {
     "preset": "react-native"
