--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "android:adb": "adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.7.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "styled-components": "^5.0.0"
