--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/async-storage": "^1.7.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-sound": "^0.11.0",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
