--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/async-storage": "^1.7.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-background-timer": "^2.1.1",
     "react-native-sound": "^0.11.0",
     "styled-components": "^5.0.0"
   },
@@ -26,6 +27,7 @@
     "@types/jest": "^25.1.1",
     "@types/react": "^16.9.19",
     "@types/react-native": "^0.61.5",
+    "@types/react-native-background-timer": "^2.0.0",
     "@types/styled-components": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
